# flux-workflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agents/skills/project-patch/: SKILL.md
.claude/steering/: product.md  structure.md  tech.md
api/: __init__.py  agents.py  executions.py  knowledge_bases.py  mcp_servers.py  nodes.py  skills.py  tools.py  workflows.py
core/: database.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ExecutionDetail/: ExecutionDetail.tsx
frontend/src/components/MCP/: MCPServerConfigPanel.tsx
frontend/src/components/NodeConfig/: NodeConfigPanel.tsx
frontend/src/components/Tools/: SkillSelector.tsx  ToolSelector.tsx
frontend/src/components/TraceViewer/: TraceViewer.tsx
frontend/src/components/WorkflowEditor/: NodePalette.tsx  WorkflowCanvas.tsx
frontend/src/components/WorkflowList/: WorkflowList.tsx
frontend/src/components/common/: DynamicListInput.tsx
frontend/src/pages/: AgentChatPage.tsx  AgentsPage.tsx  DashboardPage.tsx  KnowledgeBasesPage.tsx  SkillsPage.tsx  ToolsPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
frontend/src/types/: agents.ts  index.ts  knowledgeBase.ts  skills.ts  tools.ts
kb_data/latex_nlp/uploads/: latexnlp.md
models/: __init__.py
schemas/: __init__.py
services/: builtin_tools.py  executor.py  session_manager.py  skill_sync.py  tool_executor.py
skills/log-search/: SKILL.md  log-search.md
skills/test-dummy/: SKILL.md
(+14 files in other folders)
